# messenger-test-task

./: .gitignore  Dockerfile  Makefile  README.md  TaskEN.md  TaskRU.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250519_005803_initial.py  20250519_010057_chat_created_at.py
scripts/: check_repositories.py  migration.sh  printenv.sh
src/: __init__.py  main.py
src/application/repositories/: chat_repository.py  draft_repository.py  message_repository.py  user_repository.py
src/application/security/: jwt_interface.py
src/application/services/: chat_service.py  draft_service.py  message_broadcaster.py  message_service.py  read_status_manager.py  user_service.py
src/config/: README.md  __init__.py  settings.py
src/domain/: __init__.py
src/domain/exceptions/: repository_exceptions.py
src/domain/models/: auth.py  chat.py  draft.py  message.py  user.py
src/infrastructure/database/: database.py
src/infrastructure/redis/: connection_tracker.py  draft_store.py  message_broadcaster.py  redis.py
src/infrastructure/repositories/: chat_repository.py  message_repository.py  redis_draft_repository.py  user_repository.py
src/infrastructure/security/: __init__.py  jwt.py  jwt_factory.py
src/interface/: __init__.py  main.py
src/interface/api/: auth.py  dependencies.py
src/interface/web/: README.md  __init__.py  helpers.py  middleware.py  router.py
tests/: __init__.py  conftest.py  test_app.py  test_db.py  test_redis.py
tests/config/: __init__.py  test_settings.py
tests/integration/: test_draft_sync.py
(+49 files in other folders)
