[project]
name = "messenger-test-task"
version = "1.1.1"
description = "Mini-messenger application with real-time message exchange capabilities and group chat functionality"
authors = [
    {name = "Nick Smirnov",email = "smbrine@yandex.ru"}
]
readme = "README.md"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = "^0.109.1"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
redis = "^5.0.1"
httpx = "^0.27.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.9"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
websockets = "^12.0"
bcrypt = "^4.3.0"
jinja2 = "^3.1.6"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "^2.9.10"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
testcontainers = "^3.7.1"
black = "^24.1.1"
isort = "^5.13.2"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
aiosqlite = "^0.21.0"


[tool.poetry.group.migration.dependencies]
alembic = "^1.13.1"
greenlet = "^3.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
